--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
                         <div class="col-sm-3">
                            <div type="button" class="box b1 emerald" value ='1'>
                               <a href="#" class="thumbnail">
-                              <img src="./assets/images/emerald.png" alt="emerald" id="emerald">
+                              <img src="assets/images/emerald.png" alt="emerald" id="emerald">
                               </a>
                            </div>
                         </div>
                         <div class="col-sm-3">
                            <div type="button" class="box b2 aqua" value = '2'>
                               <a href="#" class="thumbnail">
-                              <img src="./assets/images/aqua.png" alt="aqua" id="aqua">
+                              <img src="assets/images/aqua.png" alt="aqua" id="aqua">
                               </a>
                            </div>
                         </div>
                         <div class="col-sm-3">
                            <div type="button" class="box b3 ruby" value = '3'>
                               <a href="#" class="thumbnail">
-                              <img src="./assets/images/ruby.png" alt="ruby" id="ruby">
+                              <img src="assets/images/ruby.png" alt="ruby" id="ruby">
                               </a>
                            </div>
                         </div>
                         <div class="col-sm-3">
                            <div type="button" class="box b4 violet" value= '4'>
                               <a href="#" class="thumbnail">
-                              <img src="./assets/images/violet.png" alt="violet" id="violet">
+                              <img src="assets/images/violet.png" alt="violet" id="violet">
                               </a>
                            </div>
                         </div>
@@ -96,9 +96,10 @@
                </div>
             </div>
          </div>
+         <div id="icons">icons created by <a href="https://www.webdesignerdepot.com/" title="webdesignerdepot" target="_blank">Webdesigner Depot </a> from <a href="http://www.myiconfinder.com/" title="myiconfinder" target="_blank">MYICONFINDER</a></div>
       </div>
       <!-- Adds a link to the javascript file. Loaded at the bottom so it waits for the HTML content to display first.
          If placed at the top of this page it will crash, because the HTML IDs won't exist yet.-->
-      <script src="./assets/javascript/game.js"></script>
+      <script src="assets/javascript/game.js"></script>
    </body>
 </html>
