--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
          <div id="icons">icons created by <a href="https://www.webdesignerdepot.com/" title="webdesignerdepot" target="_blank">Webdesigner Depot </a> from <a href="http://www.myiconfinder.com/" title="myiconfinder" target="_blank">MYICONFINDER</a></div>
       </div>
       <!-- Adds a link to the javascript file. Loaded at the bottom so it waits for the HTML content to display first.
-         If placed at the top of this page it will crash, because the HTML IDs won't exist yet.-->
+         If placed at the top of this page it will crash, because the HTML won't exist yet.-->
       <script src="assets/javascript/game.js"></script>
    </body>
 </html>
